--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,10 +21,10 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Get dependencies
-      run: go get -v -t -d ./...
+      run: make restore
 
     - name: Build
-      run: go build -v ./...
+      run: make
     
     - name: Test
-      run: go test ./...
+      run: make test
